Since there was already a collection with the name blog in our mongodb, I had to change the name of the new collection to BlogApp to solve the error in the app.js. Inside the create route, imported the Article model. to check to see if my article was saving successfully, console.logged the artcle id when using the try Catch method. If the article saved with no issues, the user will be redirected to the page with the article that was created. else if the article did not save properly, the user will be redirected back to the create new article page and to make sure that the user will not be asked to start all over to create a new article, after rendering the create page, we passed in the article too to the render function and that will prefill all the fields that the user had previously filled in and to achieve this we set the value of the form fields to be equal to the variable from the article obj,  that corresponds. created a new view called view, this will be the page to be rendered when the user saves an article successfully. the page will be accessed view/id

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,3 +5,9 @@ body {
 a {
   color: #00B7FF;
 }
+
+/* View Image Styles */
+
+.view-img {
+  height: 500px;
+}
